--- a/datamapper_version/Gemfile
+++ b/datamapper_version/Gemfile
@@ -1,8 +1,9 @@
 source 'https://rubygems.org'
 
 gem 'sinatra'
-gem 'datamapper'
+gem 'data_mapper'
 gem 'haml'
+gem 'dm-sqlite-adapter'
 
 group :development do
   gem 'tux'
